--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,6 +9,9 @@ body {
 }
 
 .header {
+  display:flex;
+  padding: 10px;
+  justify-content: space-between;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
@@ -27,8 +30,19 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+} 
+.container1 {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  
 }
-
+.container2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
 button {
   border: none;
   border-radius: 8px;
@@ -44,5 +58,9 @@ a {
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px; 
 }
